# OpenTaskFarm

./: .gitmodules  CMakeLists.txt
CMakeModules/: otfMacroUtils.cmake
src/: CMakeLists.txt
src/fakeTextProcessing/: CMakeLists.txt  fakeTextProcessing.cpp
src/libotf/: CMakeLists.txt  CmdLine.cpp  CmdLine.h  Master.cpp  Master.h  Node.cpp  Node.h  SimpleMaster.cpp  SimpleMaster.h  Subprocess.cpp  Subprocess.h  Task.cpp  Task.h
src/otf/: CMakeLists.txt  otf.cpp
src/otfMaster/: CMakeLists.txt  otfMaster.cpp
src/otfNode/: CMakeLists.txt  otfNode.cpp
src/otfSimpleMaster/: CMakeLists.txt  otfSimpleMaster.cpp
src/runTask/: CMakeLists.txt  runTask.cpp
