SET(OTF_SETUP_TARGET_NAME otf)

SET(OTF_SETUP_HEADERS
)

SET(OTF_SETUP_SOURCES
    otf.cpp

	${MONGOOSE_SOURCE_FILES}
)


INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR}/src/ )
INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR}/3rdparty/mongoose/ )

OTF_SETUP_EXECUTABLE()
TARGET_LINK_LIBRARIES( ${OTF_SETUP_TARGET_NAME} 
    libotf
    )



