SET(OTF_SETUP_TARGET_NAME otfNode)


SET(OTF_SETUP_HEADERS
)

SET(OTF_SETUP_SOURCES
    ${MONGOOSE_SOURCE_FILES}
    
    otfNode.cpp
)


INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR}/src/ )
INCLUDE_DIRECTORIES(AFTER ${PROJECT_SOURCE_DIR}/3rdparty/mongoose/ )

OTF_SETUP_EXECUTABLE()
TARGET_LINK_LIBRARIES( ${OTF_SETUP_TARGET_NAME} 
    libotf
    )
# OTF_SETUP_INSTALL()
# OTF_SETUP_DOCUMENT()




